<resources>
    <string name="app_name">Cifr</string>
    <string name="title_activity_cifr_login">Sign in</string>
    <string name="username">Username</string>
    <string name="btnRemoveUser">Delete</string>
    <string name="btnBlockUser">Block</string>
    <string name="createMessageText">Write your message here...</string>
    <string name="btnSend">Send</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Log in</string>

    <string name="homescreen_title">Cifr</string>
    <string name="homescreen_register">Register</string>
    <string name="homescreen_login">Log in</string>

    <string name="registration_username">Username</string>
    <string name="registration_password">Password</string>
    <string name="registration_password2">Your password</string>
    <string name="registration_username2">Your username</string>
    <string name="registration_passwordrepeat">Repeat password</string>
    <string name="registration_register">Register</string>
    <string name="registration_warning">You alone are responsible for remembering this password. If you lose it, it is lost.</string>
    <string name="registration_info">Username must be between 6 and 15 characters.\n
    \nPassword must be between 6 and 15 characters and contain one number and one upper-case letter.</string>

    <string name="search_hintusername">Enter username to search for...</string>
    <string name="search_adduser">Add user</string>

    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="StartString">Start</string>
    <string name="ContactsString">Contacts</string>
    <string name="SearchString">Search users</string>
    <string name="LogoutString">Log out</string>
    <string name="welcomeText">Hello! Thanks for using our app! If this is your first time using Cifr, swipe right to search for other users and add them. Then select them from your contact list and start chatting!</string>
    <string name="contactsMessage">This page is empty because you don\'t have any contacts yet! Swipe right, select Search User and add your friends!</string>
</resources>
