<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/CifrColorYellow"
    tools:context="se.mah.ag7406.cifr.client.StartActivities.HomeScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/homescreen_title"
        android:textAlignment="center"
        android:textColor="@color/CifrColorGrey"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="116dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:layout_marginRight="91dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif-condensed"
        android:onClick="register"
        android:text="@string/homescreen_register"
        android:textAllCaps="false"
        android:textColor="@color/CifrColorGrey"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif-condensed"
        android:onClick="login"
        android:text="@string/homescreen_login"
        android:textAllCaps="false"
        android:textColor="@color/CifrColorGrey"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/searchButton" />
</android.support.constraint.ConstraintLayout>

