<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/CifrColorYellow"
    android:backgroundTint="@color/CifrColorYellow"
    android:visibility="visible"
    tools:context="se.mah.ag7406.cifr.client.StartActivities.LoginScreen">

    <EditText
        android:id="@+id/usernamelogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/login_username"
        android:inputType="textPersonName"
        android:textColor="@color/CifrColorGrey"
        android:textColorLink="@color/CifrColorGrey"
        android:textCursorDrawable="@null"
        android:backgroundTint="@color/CifrColorGrey"
        app:layout_constraintBottom_toTopOf="@+id/passwordlogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/passwordlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="189dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textColor="@color/CifrColorGrey"
        android:textColorLink="@color/CifrColorGrey"
        android:textCursorDrawable="@null"
        android:backgroundTint="@color/CifrColorGrey"
        app:layout_constraintBottom_toTopOf="@+id/loginbutton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="111dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/transparent"
        android:capitalize="words"
        android:fontFamily="sans-serif-condensed"
        android:onClick="login"
        android:text="@string/login_button"
        android:textColor="@color/CifrColorBlue"
        android:textColorLink="@color/CifrColorGrey"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
